--- a/index.html
+++ b/index.html
@@ -1521,5 +1521,11 @@ var ravenFormsTranslations = {"validation":{"required":"Please fill in this fiel
 	_stq = window._stq || [];
 	_stq.push([ 'view', {v:'ext',j:'1:11.0',blog:'208054788',post:'2161',tz:'0',srv:'futureforum.foundation'} ]);
 	_stq.push([ 'clickTrackerInit', '208054788', '2161' ]);
+<section style="padding: 2em 1em;">
+  <div style="max-width: 800px; margin: 0 auto;">
+    <p><strong>Future Forum</strong> is a special program hosted by the non-profit Foresight Institute.</p>
+    <p>As part of Foresight’s mission to advance technologies that benefit humanity, it sponsored Future Forum to convene 300 scientists, founders, and policy thinkers in San Francisco (Aug 4–7, 2022). Isaak Freeman served as the Executive Director for Future Forum while on fellowship at Foresight, leading strategic oversight, team building, day-to-day design and execution. We're grateful to Foresight for incubating this project.</p>
+  </div>
+</section>
 </script>
 </html>
