--- a/index.html
+++ b/index.html
@@ -1410,7 +1410,9 @@ var currentScrollPos = window.pageYOffset;
 <div class="elementor-element elementor-element-2ff6532 elementor-invisible elementor-widget elementor-widget-text-editor" data-id="2ff6532" data-element_type="widget" data-settings="{&quot;_animation&quot;:&quot;fadeIn&quot;,&quot;_animation_delay&quot;:200}" data-widget_type="text-editor.default">
 <div class="elementor-widget-container">
 <div class="elementor-text-editor elementor-clearfix">
-<p>© 2022 Future Forum | All rights reserved.</p> </div>
+<p>© 2022 Future Forum | All rights reserved.</p>
+<p><strong>Future Forum</strong> is a special program hosted by the non-profit Foresight Institute.</p>
+<p>As part of Foresight’s mission to advance technologies that benefit humanity, it sponsored Future Forum to convene 300 scientists, founders, and policy thinkers in San Francisco (Aug 4–7, 2022). Isaak Freeman served as the Executive Director for Future Forum while on fellowship at Foresight, leading strategic oversight, team building, day-to-day design and execution. We're grateful to Foresight for incubating this project.</p>
 </div>
 </div>
 </div>
@@ -1435,10 +1437,6 @@ var currentScrollPos = window.pageYOffset;
 <div class="copyright hide">
 <p>All rights reserved</p>
 </div>
-</div>
-<div style="text-align: center; padding: 2em 1em; font-family: inherit; color: inherit; font-size: 14px;">
-  <p><strong>Future Forum</strong> is a special program hosted by the non-profit Foresight Institute.</p>
-  <p>As part of Foresight’s mission to advance technologies that benefit humanity, it sponsored Future Forum to convene 300 scientists, founders, and policy thinkers in San Francisco (Aug 4–7, 2022). Isaak Freeman served as the Executive Director for Future Forum while on fellowship at Foresight, leading strategic oversight, team building, day-to-day design and execution. We're grateful to Foresight for incubating this project.</p>
 </div>
 </footer>
 <div class="preloader-plus"> <div class="prog-bar-wrapper">
